--- a/force-app/main/default/classes/Tests/EmailManagerTests.cls
+++ b/force-app/main/default/classes/Tests/EmailManagerTests.cls
@@ -1,29 +1,53 @@
-/**
- * This class contains unit tests for validating the behavior of Apex classes
- * and triggers.
- *
- * Unit tests are class methods that verify whether a particular piece
- * of code is working properly. Unit test methods take no arguments,
- * commit no data to the database, and are flagged with the testMethod
- * keyword in the method definition.
- *
- * All test methods in an org are executed whenever Apex code is deployed
- * to a production org to confirm correctness, ensure code
- * coverage, and prevent regressions. All Apex classes are
- * required to have at least 75% code coverage in order to be deployed
- * to a production org. In addition, all triggers must have some code coverage.
- * 
- * The @isTest class annotation indicates this class only contains test
- * methods. Classes defined with the @isTest annotation do not count against
- * the org size limit for all Apex scripts.
- *
- * See the Apex Language Reference for more information about Testing and Code Coverage.
- */
 @isTest
-private class EmailManagerTests {
+public without sharing class EmailManagerTests {
 
     @isTest
-    static void myUnitTest() {
-        // TO DO: implement unit test
+    static void testCreateSingleEmail() {
+        Messaging.SingleEmailMessage email = EmailManager.createSingleEmail('test@example.com', 'Test Body', 'Test Subject');
+        
+        Assert.areNotEqual(null, email);
+        
+        Assert.areEqual('test@example.com', email.getToAddresses()[0]);
+        Assert.areEqual('Test Subject', email.getSubject());
+        Assert.areEqual('Test Body', email.getPlainTextBody());
+    }
+
+    @isTest
+    static void testSendEmail() {
+        Test.startTest();
+        
+        EmailManager.sendEmail('Test Subject', 'Test Body');
+        Test.stopTest();
+        
+        List<EmailMessage> emails = [
+        SELECT TextBody, Subject, ToAddress, Id
+        FROM EmailMessage
+        WHERE ToAddress =: UserInfo.getUserEmail()
+        ];
+        Assert.areNotEqual(0, emails.size());
+        Assert.areEqual('Test Subject', emails[0].Subject);
+        Assert.areEqual('Test Body', emails[0].TextBody);
+    }
+
+    @isTest
+    static void testSendErrorEmail() {
+        Test.startTest();
+        
+        Map<String, List<String>> errorsMap = new Map<String, List<String>>{
+            '500' => new List<String>{'123', '456'},
+            '404' => new List<String>{'789'}
+        };
+        
+        EmailManager.sendErrorEmail('Error Subject', errorsMap);
+        Test.stopTest();
+        
+        List<EmailMessage> emails = [
+        SELECT TextBody, Subject, ToAddress, Id
+        FROM EmailMessage
+        WHERE ToAddress =: UserInfo.getUserEmail()
+        ];
+        Assert.areNotEqual(0, emails.size());
+        Assert.areEqual('Error Subject', emails[0].Subject);
+        Assert.areEqual('Status Code: 500, error: 123, 456\nStatus Code: 404, error: 789', emails[0].TextBody);
     }
 }
