added lwc for booking appointment

--- a/force-app/main/default/classes/AppointmentController.cls
+++ b/force-app/main/default/classes/AppointmentController.cls
@@ -1,9 +1,50 @@
 public with sharing class AppointmentController {
     
     @AuraEnabled(cacheable = true)
-    public static List<Person__c> getAllDoctors() {
+    public static List<Medical_Facility__c> getAllFacilities() {
+        return 
+            [
+                select Id, Name from Medical_Facility__c 
+                with SECURITY_ENFORCED
+            ];
+    }
+
+    @AuraEnabled(cacheable = true)
+    public static List<Person__c> getAllSpecializationsFromDoctorsWorkingInAFacility(String facilityId) {
+        return 
+            [
+                select Specialization__c from Person__c 
+                where RecordType.Name = 'Doctor'
+                and Medical_Facility__c =: facilityId
+                with SECURITY_ENFORCED
+            ];
+    }
+
+    @AuraEnabled(cacheable = true)
+    public static List<Person__c> getAllDoctorsWorkingInCurrentFacility(String facilityId, String specialization) {
         return new List<Person__c>(
-            [select Id, Name, Specialization__c from Person__c where RecordType.Name = 'Doctor']
+            [
+                select Id, Name, Last_Name__c from Person__c 
+                where RecordType.Name = 'Doctor'
+                and Medical_Facility__c =: facilityId
+                and Specialization__c =: specialization
+                with SECURITY_ENFORCED
+            ]
         );
     }
+
+    // @AuraEnabled
+    // public static List<Person__c> saveAppointment(
+    //         String facilityId, String doctorId, String patientId, boolean isOnline, String DateTimee
+    //     ) {
+    //     return new List<Person__c>(
+    //         [
+    //             select Id, Name, Last_Name__c from Person__c 
+    //             where RecordType.Name = 'Doctor'
+    //             and Id in doctorId
+    //             with SECURITY_ENFORCED
+
+    //         ]
+    //     );
+    // }
 }
